# MathModel2020

./: .gitignore  README.md
c++/: data.txt  main.cpp
model/: index.html  script.js  source.html  style.css
python/: Untitled.ipynb  model.py
python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/c++/: CMakeLists.txt  double_pendulum.cpp  double_pendulum.hpp  main.cpp
src/frontend/: index.html  script.js  style.css
